Traveloka Data Analytics:
- Move helper functions to each project. Not universal anymore.
- Traveloka web scraper limited feature for 1 person, 1 night, and 1 room is done

--- a/projects/traveloka/traveloka_analysis.ipynb
+++ b/projects/traveloka/traveloka_analysis.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "53060be4-e1d5-4dab-8132-f1857aafa8ef",
    "metadata": {},
    "outputs": [],
@@ -90,10 +90,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "370d522d-04ef-4e31-8a44-b7886727db22",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Check-in date:  2023-11-11\n"
+     ]
+    }
+   ],
    "source": [
     "check_in_date = date.fromisoformat(input(\"Check-in date: \"))\n",
     "month_index = define_the_month_index_of_check_in_date_on_the_date_picker(check_in_date)"
@@ -101,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "ec320e7b-36f7-43bc-b04d-c751ab568d69",
    "metadata": {},
    "outputs": [],
@@ -116,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "079d62f4-194b-4158-bd8e-3862f6df8c30",
    "metadata": {},
    "outputs": [],
@@ -136,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 25,
    "id": "af92c45e-ae91-452f-935a-5e5bfa4d5a0e",
    "metadata": {},
    "outputs": [],
@@ -151,15 +159,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "85737d1f-f3c8-49cc-8408-5e9e24633d1f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Durations:  1\n"
+     ]
+    }
+   ],
    "source": [
     "durations = input(\"Durations: \")\n",
-    "driver.find_element(By.XPATH, \"//div[@class='css-1dbjc4n r-obd0qt r-18u37iz r-69vrnd r-tqpus0']/div[@class='css-1dbjc4n r-1e081e0 r-1ux73yq r-tqpus0'][2]\" + \n",
-    "                    \"/div[@class='css-1dbjc4n r-tqpus0']/div[@class='css-1dbjc4n r-14lw9ot r-kdyh1x r-1d2f490 r-1udh08x r-u8s1d r-j76wpu']\" +\n",
-    "                    \"/div[@class='css-1dbjc4n']/div[@class='css-1dbjc4n r-150rngu r-eqz5dr r-16y2uox r-1wbh5a2 r-11yh6sk r-1rnoaur r-1sncvnh']\" +\n",
+    "driver.find_element(By.XPATH, \"//div[@class='css-1dbjc4n']/div[@class='css-1dbjc4n r-150rngu r-eqz5dr r-16y2uox r-1wbh5a2 r-11yh6sk r-1rnoaur r-1sncvnh']\" +\n",
     "                    \"/div[@class='css-1dbjc4n']/div[@class='css-1dbjc4n r-1loqt21 r-1otgn73 r-1i6wzkk r-lrvibr'][\" + durations + \"]\").click()"
    ]
   },
@@ -173,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "id": "5036c098-adc4-4501-ae91-3aac48dfe04f",
    "metadata": {},
    "outputs": [],
@@ -192,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "73c0b9d3-d809-4a68-83dc-2c975ff4389e",
    "metadata": {},
    "outputs": [],
@@ -243,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "id": "5fa95677-833d-47a5-ae1f-53864ac297d3",
    "metadata": {},
    "outputs": [],
@@ -262,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "id": "2c204644-ba80-4c5c-92b2-24561b6c2559",
    "metadata": {},
    "outputs": [],
@@ -281,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "id": "2c1679df-de5d-4aea-809f-10406c8bfd03",
    "metadata": {},
    "outputs": [],
@@ -291,10 +305,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "e618fe11-c707-4e33-85ef-adf5e93c6d1f",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "07-11-2023\n",
+      "08-11-2023\n",
+      "09-11-2023\n",
+      "10-11-2023\n",
+      "11-11-2023\n",
+      "12-11-2023\n",
+      "13-11-2023\n",
+      "14-11-2023\n",
+      "15-11-2023\n",
+      "16-11-2023\n",
+      "17-11-2023\n",
+      "18-11-2023\n",
+      "19-11-2023\n",
+      "20-11-2023\n",
+      "21-11-2023\n",
+      "22-11-2023\n",
+      "23-11-2023\n",
+      "24-11-2023\n",
+      "25-11-2023\n",
+      "26-11-2023\n",
+      "27-11-2023\n",
+      "28-11-2023\n",
+      "29-11-2023\n",
+      "30-11-2023\n",
+      "01-12-2023\n",
+      "02-12-2023\n",
+      "03-12-2023\n",
+      "04-12-2023\n",
+      "05-12-2023\n",
+      "06-12-2023\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "from datetime import timedelta, datetime\n",
@@ -316,7 +369,7 @@
     "    print(check_in_date_new)\n",
     "    \n",
     "    driver.get(url_prefix + str(check_in_date_new) + \".\" + str(check_out_date_new) + url_postfix)\n",
-    "    time.sleep(4)\n",
+    "    time.sleep(5)\n",
     "    soup = BeautifulSoup(driver.page_source, \"html.parser\")\n",
     "    hotels = soup.find_all(\"h3\", class_ = \"css-4rbku5 css-901oao css-bfa6kz r-t1w4ow r-ubezar r-b88u0q r-rjixqe r-fdjqy7\")\n",
     "    prices = soup.find_all(\"div\", class_ = \"css-901oao r-t1w4ow r-adyw6z r-b88u0q r-135wba7 r-1ff274t\")\n",
@@ -329,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "d665dacc-5928-4d40-b536-d42115c2afa9",
    "metadata": {},
    "outputs": [],
@@ -342,18 +395,193 @@
     "# hotel.set_index([\"Check-In Date\", \"Name\"], inplace = True)\n",
     "\n",
     "# Save the DataFrame to an Excel file\n",
-    "hotel.to_excel(\"./data/output_3.xlsx\")"
+    "hotel.to_excel(\"./data/hotel_data.xlsx\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
+   "id": "a453b960-e552-4b52-bf0d-4c9a1ff917e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Check-In Date</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Reviewer</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Cambridge Hotel Medan</td>\n",
+       "      <td>07-11-2023</td>\n",
+       "      <td>1150000</td>\n",
+       "      <td>8.4</td>\n",
+       "      <td>2100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Aryaduta Medan</td>\n",
+       "      <td>07-11-2023</td>\n",
+       "      <td>945811</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>2100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Adimulia Hotel Medan</td>\n",
+       "      <td>07-11-2023</td>\n",
+       "      <td>1200000</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>2900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Grand City Hall Medan</td>\n",
+       "      <td>07-11-2023</td>\n",
+       "      <td>1180000</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>1600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Swiss-Belinn Medan</td>\n",
+       "      <td>07-11-2023</td>\n",
+       "      <td>585000</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>2000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2988</th>\n",
+       "      <td>Super OYO 621 Vania Residence</td>\n",
+       "      <td>06-12-2023</td>\n",
+       "      <td>136929</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>135</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2989</th>\n",
+       "      <td>My Studio Hotel Kualanamu Airport Medan</td>\n",
+       "      <td>06-12-2023</td>\n",
+       "      <td>79999</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>197</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2990</th>\n",
+       "      <td>Thong's Inn Hotel Kualanamu</td>\n",
+       "      <td>06-12-2023</td>\n",
+       "      <td>450000</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>163</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2991</th>\n",
+       "      <td>Super OYO 2361 Hotel Winston</td>\n",
+       "      <td>06-12-2023</td>\n",
+       "      <td>143348</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2992</th>\n",
+       "      <td>RedDoorz Plus @ Jalan Letda Sujono Medan 2</td>\n",
+       "      <td>06-12-2023</td>\n",
+       "      <td>136000</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2993 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            Name Check-In Date    Price  \\\n",
+       "0                          Cambridge Hotel Medan    07-11-2023  1150000   \n",
+       "1                                 Aryaduta Medan    07-11-2023   945811   \n",
+       "2                           Adimulia Hotel Medan    07-11-2023  1200000   \n",
+       "3                          Grand City Hall Medan    07-11-2023  1180000   \n",
+       "4                             Swiss-Belinn Medan    07-11-2023   585000   \n",
+       "...                                          ...           ...      ...   \n",
+       "2988               Super OYO 621 Vania Residence    06-12-2023   136929   \n",
+       "2989     My Studio Hotel Kualanamu Airport Medan    06-12-2023    79999   \n",
+       "2990                 Thong's Inn Hotel Kualanamu    06-12-2023   450000   \n",
+       "2991                Super OYO 2361 Hotel Winston    06-12-2023   143348   \n",
+       "2992  RedDoorz Plus @ Jalan Letda Sujono Medan 2    06-12-2023   136000   \n",
+       "\n",
+       "      Rating  Reviewer  \n",
+       "0        8.4      2100  \n",
+       "1        8.3      2100  \n",
+       "2        8.5      2900  \n",
+       "3        8.5      1600  \n",
+       "4        8.3      2000  \n",
+       "...      ...       ...  \n",
+       "2988     8.1       135  \n",
+       "2989     7.7       197  \n",
+       "2990     8.1       163  \n",
+       "2991     6.9        93  \n",
+       "2992     6.9         5  \n",
+       "\n",
+       "[2993 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hotel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "6542058b-14a0-4c02-8b81-42b0aaf1e3a4",
    "metadata": {},
    "outputs": [],
    "source": [
     "driver.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05130059-6538-4f19-84bd-8e706675cbd0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
